third_party/rust/proc-macro-hack/tests/ui/unexpected.stderr
error: unexpected input to #[proc_macro_hack]
 --> tests/ui/unexpected.rs:4:5
  |
4 | pub struct What;
  |     ^^^^^^
